# Line_Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.lge  all.txt  iso.txt  launch-lineengine
.github/workflows/: ci.yml
Shaders/: fragment.glsl  vertex.glsl
hdrs/: Buffer.hpp  Desktop.hpp  Engine.hpp  GlBuffer.hpp  Lge.hpp  Map.hpp  Paths.hpp  RenderConfig.hpp  Shader.hpp  Window.hpp
packaging/: lineengine.desktop.in  lineengine.xml
packaging/debian/: postinst
source/: Buffer.cpp  Desktop.cpp  Engine.cpp  GlBuffer.cpp  Main.cpp  Map.cpp  ParsConvert.cpp  Paths.cpp  RenderConfig.cpp  Shader.cpp  Validation.cpp  Window.cpp  lge_Basics.cpp  lge_Desktop.cpp  lge_ParseConvert.cpp  lge_Validation.cpp
